tests/syntax_error/union_1only.jou
class Foo:
    union:  # Error: unions must have at least 2 members
        x: int
